Bahoot Logo and Commenting
+ Added Bahoot Logo to WebApps
+ Added Comment Column in Responses
+ Added Commenting feature on Android App

--- a/Android App/app/src/main/res/values/strings.xml
+++ b/Android App/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="enter_room_code">Enter Room Code</string>
     <string name="enter">Enter</string>
     <string name="next_question">Next Question</string>
+    <string name="comment">Comment</string>
 </resources>
