Prevent users from repeatedly answering questions
+ Added userID column in responses table
+ Added feature to Prevent users from repeatedly answering questions and adding to the response table
+ Rework MainActivity Logic
+ Minor Tweak to MainActivity UI
+ Testing SMS Feature

--- a/Android App/app/src/main/res/values/strings.xml
+++ b/Android App/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="enter">Enter</string>
     <string name="next_question">Next Question</string>
     <string name="comment">Comment</string>
+    <string name="edit_comment">Edit Comment</string>
+
 </resources>
