Question Timer / UIUX Tweaks
+ Added a 20s timer in the form of a progress bar in MainActivity
    app will send response with option 0 if timer reaches 0
+ fixed display/stats.jsp crash if option is 0
+ Added Log Out button
+ Minor UI Tweaks

--- a/Android App/app/src/main/res/values/strings.xml
+++ b/Android App/app/src/main/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="comment">Comment</string>
     <string name="edit_comment">Edit Comment</string>
     <string name="zero_score">Score: 0</string>
+    <string name="log_out_prompt">Are you sure you want to log out?</string>
 
 </resources>
