App UIUX / see Comments in Stats
+ Improved UI of android app
+ Added see Comments and given answers in Stats page
+ Updated Script

--- a/Android App/app/src/main/res/values/strings.xml
+++ b/Android App/app/src/main/res/values/strings.xml
@@ -23,5 +23,7 @@
     <string name="edit_comment">Edit Comment</string>
     <string name="zero_score">Score: 0</string>
     <string name="log_out_prompt">Are you sure you want to log out?</string>
+    <string name="bahoot_description">Bahoot!</string>
+    <string name="enter_comment">Enter Comment</string>
 
 </resources>
